--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="CD_Almacen.cs" />
     <Compile Include="CD_Productos.cs" />
+    <Compile Include="CD_Tipo_Usuario.cs" />
     <Compile Include="CD_Usuarios.cs" />
     <Compile Include="ConnectionToSql.cs" />
     <Compile Include="Class1.cs" />
